three times vanilla or chocolate single update

--- a/bayesian_made_simple/cookie_01.ipynb
+++ b/bayesian_made_simple/cookie_01.ipynb
@@ -420,7 +420,198 @@
    "source": [
     "### Exercise 1_b\n",
     "\n",
-    "First we pick up vanilla and second also is vanilla, what is probability that it is from bowl#01\n"
+    "First we pick up vanilla and second also is vanilla, what is probability that it is from bowl_01\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-23T11:54:23.192163Z",
+     "start_time": "2021-05-23T11:54:23.165297Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>priors</th>\n",
+       "      <th>likelihood</th>\n",
+       "      <th>unnormalized_posterior</th>\n",
+       "      <th>prob_data</th>\n",
+       "      <th>posterior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bowl_1</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5625</td>\n",
+       "      <td>0.28125</td>\n",
+       "      <td>0.40625</td>\n",
+       "      <td>0.692308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bowl_2</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.2500</td>\n",
+       "      <td>0.12500</td>\n",
+       "      <td>0.40625</td>\n",
+       "      <td>0.307692</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        priors  likelihood  unnormalized_posterior  prob_data  posterior\n",
+       "Bowl_1     0.5      0.5625                 0.28125    0.40625   0.692308\n",
+       "Bowl_2     0.5      0.2500                 0.12500    0.40625   0.307692"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# in a single update for two times vanilla\n",
+    "priors = [1/2, 1/2]\n",
+    "priors_index = ['Bowl_1', 'Bowl_2']\n",
+    "likelihood = [30/40 * 30/40, 10/20 * 10/20]\n",
+    "single_same_df = get_posterior(priors, priors_index, likelihood)\n",
+    "single_same_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 1_c\n",
+    "\n",
+    "Draw three times and each time it is a vanilla cookie, what is probability that it is from bowl_01\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-23T11:56:51.769119Z",
+     "start_time": "2021-05-23T11:56:51.751495Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>priors</th>\n",
+       "      <th>likelihood</th>\n",
+       "      <th>unnormalized_posterior</th>\n",
+       "      <th>prob_data</th>\n",
+       "      <th>posterior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bowl_1</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.421875</td>\n",
+       "      <td>0.210938</td>\n",
+       "      <td>0.273438</td>\n",
+       "      <td>0.771429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bowl_2</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.125000</td>\n",
+       "      <td>0.062500</td>\n",
+       "      <td>0.273438</td>\n",
+       "      <td>0.228571</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        priors  likelihood  unnormalized_posterior  prob_data  posterior\n",
+       "Bowl_1     0.5    0.421875                0.210938   0.273438   0.771429\n",
+       "Bowl_2     0.5    0.125000                0.062500   0.273438   0.228571"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# in a single update for three times vanilla\n",
+    "priors = [1/2, 1/2]\n",
+    "priors_index = ['Bowl_1', 'Bowl_2']\n",
+    "likelihood = [30/40 * 30/40 * 30/40, 10/20 * 10/20 * 10/20]\n",
+    "single_same_df = get_posterior(priors, priors_index, likelihood)\n",
+    "single_same_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 1_d\n",
+    "\n",
+    "Draw three times and each time it is a chocolate cookie, what is probability that it is from bowl_01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# in a single update for three times vanilla\n",
+    "priors = [1/2, 1/2]\n",
+    "priors_index = ['Bowl_1', 'Bowl_2']\n",
+    "likelihood = [30/40 * 30/40 * 30/40, 10/20 * 10/20 * 10/20]\n",
+    "single_same_df = get_posterior(priors, priors_index, likelihood)\n",
+    "single_same_df"
    ]
   },
   {
