started dice notebook

--- a/bayesian_made_simple/cookie_01.ipynb
+++ b/bayesian_made_simple/cookie_01.ipynb
@@ -2,14 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-23T11:42:59.675570Z",
-     "start_time": "2021-05-23T11:42:58.185689Z"
+     "end_time": "2021-05-23T12:14:51.163163Z",
+     "start_time": "2021-05-23T12:14:48.700263Z"
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\numpy\\core\\__init__.py:29: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\numpy\\.libs\\libopenblas.PYQHXLVVQ7VESDPUVUADXEVJOBGHJPAY.gfortran-win_amd64.dll\n",
+      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\numpy\\.libs\\libopenblas.TXA6YQSD3GCQQC22GEQ54J2UDCXDXHWN.gfortran-win_amd64.dll\n",
+      "  stacklevel=1)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -47,11 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-23T11:42:59.722995Z",
-     "start_time": "2021-05-23T11:42:59.709881Z"
+     "end_time": "2021-05-23T12:14:51.177790Z",
+     "start_time": "2021-05-23T12:14:51.167770Z"
     }
    },
    "outputs": [],
@@ -63,11 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-23T11:42:59.769433Z",
-     "start_time": "2021-05-23T11:42:59.756543Z"
+     "end_time": "2021-05-23T12:14:51.208179Z",
+     "start_time": "2021-05-23T12:14:51.180304Z"
     }
    },
    "outputs": [],
@@ -85,11 +95,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-23T11:43:00.514830Z",
-     "start_time": "2021-05-23T11:43:00.457570Z"
+     "end_time": "2021-05-23T12:14:51.269604Z",
+     "start_time": "2021-05-23T12:14:51.211431Z"
     }
    },
    "outputs": [
@@ -148,7 +158,7 @@
        "Bowl_2     0.5        0.50                   0.250      0.625        0.4"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,11 +181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-23T11:43:01.357649Z",
-     "start_time": "2021-05-23T11:43:01.336913Z"
+     "end_time": "2021-05-23T12:14:51.300609Z",
+     "start_time": "2021-05-23T12:14:51.271658Z"
     }
    },
    "outputs": [
@@ -234,7 +244,7 @@
        "Bowl_2     0.5        0.50                   0.250      0.625        0.4"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,11 +260,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-23T11:43:01.885513Z",
-     "start_time": "2021-05-23T11:43:01.857997Z"
+     "end_time": "2021-05-23T12:14:51.362580Z",
+     "start_time": "2021-05-23T12:14:51.304144Z"
     }
    },
    "outputs": [
@@ -313,7 +323,7 @@
        "Bowl_2     0.4        0.50                    0.20       0.35   0.571429"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,11 +347,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-23T11:43:03.912777Z",
-     "start_time": "2021-05-23T11:43:03.884885Z"
+     "end_time": "2021-05-23T12:14:51.409252Z",
+     "start_time": "2021-05-23T12:14:51.368854Z"
     }
    },
    "outputs": [
@@ -400,7 +410,7 @@
        "Bowl_2     0.5      0.2500                 0.12500    0.21875   0.571429"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,11 +435,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-23T11:54:23.192163Z",
-     "start_time": "2021-05-23T11:54:23.165297Z"
+     "end_time": "2021-05-23T12:14:51.456450Z",
+     "start_time": "2021-05-23T12:14:51.416262Z"
     },
     "scrolled": true
    },
@@ -489,7 +499,7 @@
        "Bowl_2     0.5      0.2500                 0.12500    0.40625   0.307692"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,11 +524,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-23T11:56:51.769119Z",
-     "start_time": "2021-05-23T11:56:51.751495Z"
+     "end_time": "2021-05-23T12:14:51.503874Z",
+     "start_time": "2021-05-23T12:14:51.461777Z"
     }
    },
    "outputs": [
@@ -577,7 +587,7 @@
        "Bowl_2     0.5    0.125000                0.062500   0.273438   0.228571"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,14 +612,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-23T12:14:51.551188Z",
+     "start_time": "2021-05-23T12:14:51.508087Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>priors</th>\n",
+       "      <th>likelihood</th>\n",
+       "      <th>unnormalized_posterior</th>\n",
+       "      <th>prob_data</th>\n",
+       "      <th>posterior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bowl_1</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.015625</td>\n",
+       "      <td>0.007812</td>\n",
+       "      <td>0.070312</td>\n",
+       "      <td>0.111111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bowl_2</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.125000</td>\n",
+       "      <td>0.062500</td>\n",
+       "      <td>0.070312</td>\n",
+       "      <td>0.888889</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        priors  likelihood  unnormalized_posterior  prob_data  posterior\n",
+       "Bowl_1     0.5    0.015625                0.007812   0.070312   0.111111\n",
+       "Bowl_2     0.5    0.125000                0.062500   0.070312   0.888889"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# in a single update for three times vanilla\n",
     "priors = [1/2, 1/2]\n",
     "priors_index = ['Bowl_1', 'Bowl_2']\n",
-    "likelihood = [30/40 * 30/40 * 30/40, 10/20 * 10/20 * 10/20]\n",
+    "likelihood = [10/40 * 10/40 * 10/40, 10/20 * 10/20 * 10/20]\n",
     "single_same_df = get_posterior(priors, priors_index, likelihood)\n",
     "single_same_df"
    ]
@@ -643,11 +718,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T06:30:50.945162Z",
-     "start_time": "2021-05-17T06:30:50.918546Z"
+     "end_time": "2021-05-23T12:14:51.598351Z",
+     "start_time": "2021-05-23T12:14:51.554667Z"
     }
    },
    "outputs": [
@@ -766,7 +841,7 @@
        "[101 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,11 +860,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T06:30:50.990994Z",
-     "start_time": "2021-05-17T06:30:50.950445Z"
+     "end_time": "2021-05-23T12:14:51.660502Z",
+     "start_time": "2021-05-23T12:14:51.601070Z"
     }
    },
    "outputs": [
@@ -932,7 +1007,7 @@
        "[101 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,11 +1019,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T06:30:51.284839Z",
-     "start_time": "2021-05-17T06:30:50.993625Z"
+     "end_time": "2021-05-23T12:14:52.064469Z",
+     "start_time": "2021-05-23T12:14:51.664613Z"
     }
    },
    "outputs": [
@@ -958,7 +1033,7 @@
        "Text(0.5, 1.0, 'Posterior, one vanilla')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -994,11 +1069,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T06:30:51.300442Z",
-     "start_time": "2021-05-17T06:30:51.286732Z"
+     "end_time": "2021-05-23T12:14:52.079708Z",
+     "start_time": "2021-05-23T12:14:52.066365Z"
     }
    },
    "outputs": [],
@@ -1010,11 +1085,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T06:30:51.345944Z",
-     "start_time": "2021-05-17T06:30:51.302147Z"
+     "end_time": "2021-05-23T12:14:52.126760Z",
+     "start_time": "2021-05-23T12:14:52.082084Z"
     }
    },
    "outputs": [
@@ -1157,7 +1232,7 @@
        "[101 rows x 5 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,11 +1244,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T06:30:51.627228Z",
-     "start_time": "2021-05-17T06:30:51.349859Z"
+     "end_time": "2021-05-23T12:14:52.407282Z",
+     "start_time": "2021-05-23T12:14:52.128858Z"
     }
    },
    "outputs": [
@@ -1183,7 +1258,7 @@
        "Text(0.5, 1.0, 'Posterior, one vanilla')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1219,11 +1294,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T06:30:51.642139Z",
-     "start_time": "2021-05-17T06:30:51.630338Z"
+     "end_time": "2021-05-23T12:14:52.422711Z",
+     "start_time": "2021-05-23T12:14:52.409269Z"
     }
    },
    "outputs": [],
@@ -1236,11 +1311,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T06:30:51.719709Z",
-     "start_time": "2021-05-17T06:30:51.644786Z"
+     "end_time": "2021-05-23T12:14:52.468382Z",
+     "start_time": "2021-05-23T12:14:52.425644Z"
     }
    },
    "outputs": [
@@ -1383,7 +1458,7 @@
        "[101 rows x 5 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1395,11 +1470,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T06:30:52.061896Z",
-     "start_time": "2021-05-17T06:30:51.722708Z"
+     "end_time": "2021-05-23T12:14:52.840993Z",
+     "start_time": "2021-05-23T12:14:52.471588Z"
     }
    },
    "outputs": [
@@ -1409,7 +1484,7 @@
        "Text(0.5, 1.0, 'Posterior, for two vanilla and one chocolate')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1434,11 +1509,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-17T06:30:52.076775Z",
-     "start_time": "2021-05-17T06:30:52.064260Z"
+     "end_time": "2021-05-23T12:14:52.856459Z",
+     "start_time": "2021-05-23T12:14:52.844074Z"
     }
    },
    "outputs": [
@@ -1448,7 +1523,7 @@
        "67"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
