--- a/bayesian_made_simple/dice_01.ipynb
+++ b/bayesian_made_simple/dice_01.ipynb
@@ -1,6 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-24T06:22:19.390103Z",
+     "start_time": "2021-05-24T06:22:19.371438Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All packages installed successfuly\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    import pandas as pd\n",
+    "    pd.get_option(\"display.max_columns\")\n",
+    "    import numpy as np\n",
+    "    import seaborn as sns\n",
+    "    sns.set_style('white')\n",
+    "    sns.set_context('talk')\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    print('All packages installed successfuly')\n",
+    "except Exception as e:\n",
+    "    print(f'Exception: {e}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -18,11 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-24T05:05:06.675946Z",
-     "start_time": "2021-05-24T05:05:06.668215Z"
+     "end_time": "2021-05-24T06:22:20.817997Z",
+     "start_time": "2021-05-24T06:22:20.802761Z"
     }
    },
    "outputs": [],
@@ -34,11 +66,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-24T05:05:07.728302Z",
-     "start_time": "2021-05-24T05:05:07.708585Z"
+     "end_time": "2021-05-24T06:22:21.208417Z",
+     "start_time": "2021-05-24T06:22:21.189079Z"
     }
    },
    "outputs": [],
@@ -56,30 +88,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-24T05:05:25.274832Z",
-     "start_time": "2021-05-24T05:05:25.176363Z"
+     "end_time": "2021-05-24T06:22:21.567583Z",
+     "start_time": "2021-05-24T06:22:21.542210Z"
     }
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-db347b380d57>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mresult_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_posterior\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpriors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpriors_index\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlikelihood\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mresult_df\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-3-88bb76200625>\u001b[0m in \u001b[0;36mget_posterior\u001b[1;34m(priors, priors_index, likelihood)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mget_posterior\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpriors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpriors_index\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlikelihood\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mnew_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mnew_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'priors'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpriors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mnew_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'likelihood'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlikelihood\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mnew_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpriors_index\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>priors</th>\n",
+       "      <th>likelihood</th>\n",
+       "      <th>unnormalized_posterior</th>\n",
+       "      <th>prob_data</th>\n",
+       "      <th>posterior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4-sided die</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.09375</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6-sided die</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.041667</td>\n",
+       "      <td>0.09375</td>\n",
+       "      <td>0.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8-sided die</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.125000</td>\n",
+       "      <td>0.031250</td>\n",
+       "      <td>0.09375</td>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12-sided die</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.020833</td>\n",
+       "      <td>0.09375</td>\n",
+       "      <td>0.222222</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              priors  likelihood  unnormalized_posterior  prob_data  posterior\n",
+       "4-sided die     0.25    0.000000                0.000000    0.09375   0.000000\n",
+       "6-sided die     0.25    0.166667                0.041667    0.09375   0.444444\n",
+       "8-sided die     0.25    0.125000                0.031250    0.09375   0.333333\n",
+       "12-sided die    0.25    0.083333                0.020833    0.09375   0.222222"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "result_df = get_posterior(priors, priors_index, likelihood)\n",
     "result_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Suppose I select a die from the box at random, roll it, and get a [8, 7, 7, 5, 4].\n",
+    "What is the probability that I rolled each die?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-24T06:22:22.348007Z",
+     "start_time": "2021-05-24T06:22:22.339842Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def likelihood_nest(data, dice_sides):\n",
+    "    likelihood_nested = []\n",
+    "    for d in data:\n",
+    "        like = []\n",
+    "        for dice in dice_sides:\n",
+    "            if d <= dice:\n",
+    "                like.append(1/dice)\n",
+    "            else:\n",
+    "                like.append(0)\n",
+    "        print(like)\n",
+    "        likelihood_nested.append(like)\n",
+    "    return likelihood_nested"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-24T06:22:22.829251Z",
+     "start_time": "2021-05-24T06:22:22.810280Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "data = [8,7,7,5,4]\n",
+    "dice_sides = [4,6,8,12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-24T06:22:23.403375Z",
+     "start_time": "2021-05-24T06:22:23.389927Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0.125, 0.08333333333333333]\n",
+      "[0, 0, 0.125, 0.08333333333333333]\n",
+      "[0, 0, 0.125, 0.08333333333333333]\n",
+      "[0, 0.16666666666666666, 0.125, 0.08333333333333333]\n",
+      "[0.25, 0.16666666666666666, 0.125, 0.08333333333333333]\n"
+     ]
+    }
+   ],
+   "source": [
+    "likelihood_nested = likelihood_nest(data, dice_sides)\n",
+    "priors = [1/4, 1/4, 1/4, 1/4]\n",
+    "priors_index = ['4-sided die', '6-sided die', '8-sided die', '12-sided die']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-24T06:22:23.982580Z",
+     "start_time": "2021-05-24T06:22:23.923760Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability result of getting 8\n",
+      "              priors  likelihood  unnormalized_posterior  prob_data  posterior\n",
+      "4-sided die     0.25    0.000000                0.000000   0.052083        0.0\n",
+      "6-sided die     0.25    0.000000                0.000000   0.052083        0.0\n",
+      "8-sided die     0.25    0.125000                0.031250   0.052083        0.6\n",
+      "12-sided die    0.25    0.083333                0.020833   0.052083        0.4\n",
+      "\n",
+      "Probability result of getting 7\n",
+      "              priors  likelihood  unnormalized_posterior  prob_data  posterior\n",
+      "4-sided die     0.25    0.000000                0.000000   0.052083        0.0\n",
+      "6-sided die     0.25    0.000000                0.000000   0.052083        0.0\n",
+      "8-sided die     0.25    0.125000                0.031250   0.052083        0.6\n",
+      "12-sided die    0.25    0.083333                0.020833   0.052083        0.4\n",
+      "\n",
+      "Probability result of getting 7\n",
+      "              priors  likelihood  unnormalized_posterior  prob_data  posterior\n",
+      "4-sided die     0.25    0.000000                0.000000   0.052083        0.0\n",
+      "6-sided die     0.25    0.000000                0.000000   0.052083        0.0\n",
+      "8-sided die     0.25    0.125000                0.031250   0.052083        0.6\n",
+      "12-sided die    0.25    0.083333                0.020833   0.052083        0.4\n",
+      "\n",
+      "Probability result of getting 5\n",
+      "              priors  likelihood  unnormalized_posterior  prob_data  posterior\n",
+      "4-sided die     0.25    0.000000                0.000000    0.09375   0.000000\n",
+      "6-sided die     0.25    0.166667                0.041667    0.09375   0.444444\n",
+      "8-sided die     0.25    0.125000                0.031250    0.09375   0.333333\n",
+      "12-sided die    0.25    0.083333                0.020833    0.09375   0.222222\n",
+      "\n",
+      "Probability result of getting 4\n",
+      "              priors  likelihood  unnormalized_posterior  prob_data  posterior\n",
+      "4-sided die     0.25    0.250000                0.062500    0.15625   0.400000\n",
+      "6-sided die     0.25    0.166667                0.041667    0.15625   0.266667\n",
+      "8-sided die     0.25    0.125000                0.031250    0.15625   0.200000\n",
+      "12-sided die    0.25    0.083333                0.020833    0.15625   0.133333\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, likelihood in enumerate(likelihood_nested):\n",
+    "    print(f'Probability result of getting {data[index]}')\n",
+    "    print(get_posterior(priors, priors_index, likelihood))\n",
+    "    print()"
    ]
   },
   {
