--- a/bayesian_made_simple/dice_01.ipynb
+++ b/bayesian_made_simple/dice_01.ipynb
@@ -257,11 +257,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-24T06:22:23.982580Z",
-     "start_time": "2021-05-24T06:22:23.923760Z"
+     "end_time": "2021-05-24T06:25:11.700933Z",
+     "start_time": "2021-05-24T06:25:11.629381Z"
     }
    },
    "outputs": [
@@ -308,10 +308,124 @@
     }
    ],
    "source": [
+    "result_dict = {}\n",
     "for index, likelihood in enumerate(likelihood_nested):\n",
     "    print(f'Probability result of getting {data[index]}')\n",
     "    print(get_posterior(priors, priors_index, likelihood))\n",
-    "    print()"
+    "    print()\n",
+    "    result_dict[f'roll_{data[index]}'] = get_posterior(priors, priors_index, likelihood)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-24T06:27:42.451164Z",
+     "start_time": "2021-05-24T06:27:42.440881Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for index, key in enumerate(result_dict.keys()):\n",
+    "    result_dict[key]['roll_in'] = np.repeat([data[index]], len(result_dict[key]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-24T06:27:47.096305Z",
+     "start_time": "2021-05-24T06:27:47.072684Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'roll_8':               priors  likelihood  unnormalized_posterior  prob_data  \\\n",
+       " 4-sided die     0.25    0.000000                0.000000   0.052083   \n",
+       " 6-sided die     0.25    0.000000                0.000000   0.052083   \n",
+       " 8-sided die     0.25    0.125000                0.031250   0.052083   \n",
+       " 12-sided die    0.25    0.083333                0.020833   0.052083   \n",
+       " \n",
+       "               posterior  roll_in  \n",
+       " 4-sided die         0.0        8  \n",
+       " 6-sided die         0.0        8  \n",
+       " 8-sided die         0.6        8  \n",
+       " 12-sided die        0.4        8  ,\n",
+       " 'roll_7':               priors  likelihood  unnormalized_posterior  prob_data  \\\n",
+       " 4-sided die     0.25    0.000000                0.000000   0.052083   \n",
+       " 6-sided die     0.25    0.000000                0.000000   0.052083   \n",
+       " 8-sided die     0.25    0.125000                0.031250   0.052083   \n",
+       " 12-sided die    0.25    0.083333                0.020833   0.052083   \n",
+       " \n",
+       "               posterior  roll_in  \n",
+       " 4-sided die         0.0        7  \n",
+       " 6-sided die         0.0        7  \n",
+       " 8-sided die         0.6        7  \n",
+       " 12-sided die        0.4        7  ,\n",
+       " 'roll_5':               priors  likelihood  unnormalized_posterior  prob_data  \\\n",
+       " 4-sided die     0.25    0.000000                0.000000    0.09375   \n",
+       " 6-sided die     0.25    0.166667                0.041667    0.09375   \n",
+       " 8-sided die     0.25    0.125000                0.031250    0.09375   \n",
+       " 12-sided die    0.25    0.083333                0.020833    0.09375   \n",
+       " \n",
+       "               posterior  roll_in  \n",
+       " 4-sided die    0.000000        7  \n",
+       " 6-sided die    0.444444        7  \n",
+       " 8-sided die    0.333333        7  \n",
+       " 12-sided die   0.222222        7  ,\n",
+       " 'roll_4':               priors  likelihood  unnormalized_posterior  prob_data  \\\n",
+       " 4-sided die     0.25    0.250000                0.062500    0.15625   \n",
+       " 6-sided die     0.25    0.166667                0.041667    0.15625   \n",
+       " 8-sided die     0.25    0.125000                0.031250    0.15625   \n",
+       " 12-sided die    0.25    0.083333                0.020833    0.15625   \n",
+       " \n",
+       "               posterior  roll_in  \n",
+       " 4-sided die    0.400000        5  \n",
+       " 6-sided die    0.266667        5  \n",
+       " 8-sided die    0.200000        5  \n",
+       " 12-sided die   0.133333        5  }"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-24T06:31:00.970650Z",
+     "start_time": "2021-05-24T06:31:00.938815Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "first argument must be an iterable of pandas objects, you passed an object of type \"DataFrame\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-43-d70140f98c80>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;33m[\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mresult_dict\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-43-d70140f98c80>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;33m[\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mresult_dict\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\pandas\\core\\reshape\\concat.py\u001b[0m in \u001b[0;36mconcat\u001b[1;34m(objs, axis, join, ignore_index, keys, levels, names, verify_integrity, sort, copy)\u001b[0m\n\u001b[0;32m    279\u001b[0m         \u001b[0mverify_integrity\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mverify_integrity\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    280\u001b[0m         \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 281\u001b[1;33m         \u001b[0msort\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msort\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    282\u001b[0m     )\n\u001b[0;32m    283\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\pandas\\core\\reshape\\concat.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, objs, axis, join, keys, levels, names, ignore_index, verify_integrity, copy, sort)\u001b[0m\n\u001b[0;32m    307\u001b[0m                 \u001b[1;34m\"first argument must be an iterable of pandas \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    308\u001b[0m                 \u001b[1;34m\"objects, you passed an object of type \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 309\u001b[1;33m                 \u001b[1;34m'\"{name}\"'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobjs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    310\u001b[0m             )\n\u001b[0;32m    311\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: first argument must be an iterable of pandas objects, you passed an object of type \"DataFrame\""
+     ]
+    }
+   ],
+   "source": [
+    "[pd.concat(value) for key, value in result_dict.items() ]"
    ]
   },
   {
