--- a/bayesian_made_simple/dice_01.ipynb
+++ b/bayesian_made_simple/dice_01.ipynb
@@ -189,6 +189,158 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-24T07:19:05.489537Z",
+     "start_time": "2021-05-24T07:19:05.471359Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 0.0\n",
+      "6 0.0\n",
+      "8 3.0517578125e-05\n",
+      "12 4.0187757201646085e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "likelihood_l = []\n",
+    "for dice in dice_sides:\n",
+    "    value = 1\n",
+    "    for d in data:\n",
+    "        if d <= dice:\n",
+    "            value *= (1/dice)\n",
+    "        else:\n",
+    "            value *= 0\n",
+    "    print(dice, value)\n",
+    "    likelihood_l.append(value)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-24T07:19:11.244094Z",
+     "start_time": "2021-05-24T07:19:11.225420Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0, 0.0, 3.0517578125e-05, 4.0187757201646085e-06]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "likelihood_l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-24T07:10:00.797326Z",
+     "start_time": "2021-05-24T07:10:00.781242Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def get_likelihood(data, dice_sides):\n",
+    "    likelihood_nested = []\n",
+    "    for d in data:\n",
+    "        like = []\n",
+    "        for dice in dice_sides:\n",
+    "            if d <= dice:\n",
+    "                like.append(1/dice)\n",
+    "            else:\n",
+    "                like.append(0)\n",
+    "        print(like)\n",
+    "        likelihood_nested.append(like)\n",
+    "    return likelihood_nested\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-24T07:10:23.734333Z",
+     "start_time": "2021-05-24T07:10:23.724165Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0.125, 0.08333333333333333]\n",
+      "[0, 0, 0.125, 0.08333333333333333]\n",
+      "[0, 0, 0.125, 0.08333333333333333]\n",
+      "[0, 0.16666666666666666, 0.125, 0.08333333333333333]\n",
+      "[0.25, 0.16666666666666666, 0.125, 0.08333333333333333]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0.125, 0.08333333333333333],\n",
+       " [0, 0, 0.125, 0.08333333333333333],\n",
+       " [0, 0, 0.125, 0.08333333333333333],\n",
+       " [0, 0.16666666666666666, 0.125, 0.08333333333333333],\n",
+       " [0.25, 0.16666666666666666, 0.125, 0.08333333333333333]]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "likelihood_nested = likelihood_nest(data, dice_sides)\n",
+    "likelihood_nested"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-24T07:13:26.287530Z",
+     "start_time": "2021-05-24T07:13:26.267323Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.        , 0.        , 0.125     , 0.08333333])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "likelihood_nested = np.array(likelihood_nested)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
@@ -401,31 +553,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-24T06:31:00.970650Z",
-     "start_time": "2021-05-24T06:31:00.938815Z"
+     "end_time": "2021-05-24T06:34:26.294153Z",
+     "start_time": "2021-05-24T06:34:26.261860Z"
     }
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "first argument must be an iterable of pandas objects, you passed an object of type \"DataFrame\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-43-d70140f98c80>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;33m[\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mresult_dict\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-43-d70140f98c80>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;33m[\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mresult_dict\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\pandas\\core\\reshape\\concat.py\u001b[0m in \u001b[0;36mconcat\u001b[1;34m(objs, axis, join, ignore_index, keys, levels, names, verify_integrity, sort, copy)\u001b[0m\n\u001b[0;32m    279\u001b[0m         \u001b[0mverify_integrity\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mverify_integrity\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    280\u001b[0m         \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 281\u001b[1;33m         \u001b[0msort\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msort\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    282\u001b[0m     )\n\u001b[0;32m    283\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\pandas\\core\\reshape\\concat.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, objs, axis, join, keys, levels, names, ignore_index, verify_integrity, copy, sort)\u001b[0m\n\u001b[0;32m    307\u001b[0m                 \u001b[1;34m\"first argument must be an iterable of pandas \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    308\u001b[0m                 \u001b[1;34m\"objects, you passed an object of type \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 309\u001b[1;33m                 \u001b[1;34m'\"{name}\"'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobjs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    310\u001b[0m             )\n\u001b[0;32m    311\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: first argument must be an iterable of pandas objects, you passed an object of type \"DataFrame\""
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>priors</th>\n",
+       "      <th>likelihood</th>\n",
+       "      <th>unnormalized_posterior</th>\n",
+       "      <th>prob_data</th>\n",
+       "      <th>posterior</th>\n",
+       "      <th>roll_in</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.052083</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.052083</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.125000</td>\n",
+       "      <td>0.031250</td>\n",
+       "      <td>0.052083</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.020833</td>\n",
+       "      <td>0.052083</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.052083</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.052083</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.125000</td>\n",
+       "      <td>0.031250</td>\n",
+       "      <td>0.052083</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.020833</td>\n",
+       "      <td>0.052083</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.093750</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.041667</td>\n",
+       "      <td>0.093750</td>\n",
+       "      <td>0.444444</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.125000</td>\n",
+       "      <td>0.031250</td>\n",
+       "      <td>0.093750</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.020833</td>\n",
+       "      <td>0.093750</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>0.062500</td>\n",
+       "      <td>0.156250</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.041667</td>\n",
+       "      <td>0.156250</td>\n",
+       "      <td>0.266667</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.125000</td>\n",
+       "      <td>0.031250</td>\n",
+       "      <td>0.156250</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.020833</td>\n",
+       "      <td>0.156250</td>\n",
+       "      <td>0.133333</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    priors  likelihood  unnormalized_posterior  prob_data  posterior  roll_in\n",
+       "0     0.25    0.000000                0.000000   0.052083   0.000000        8\n",
+       "1     0.25    0.000000                0.000000   0.052083   0.000000        8\n",
+       "2     0.25    0.125000                0.031250   0.052083   0.600000        8\n",
+       "3     0.25    0.083333                0.020833   0.052083   0.400000        8\n",
+       "4     0.25    0.000000                0.000000   0.052083   0.000000        7\n",
+       "5     0.25    0.000000                0.000000   0.052083   0.000000        7\n",
+       "6     0.25    0.125000                0.031250   0.052083   0.600000        7\n",
+       "7     0.25    0.083333                0.020833   0.052083   0.400000        7\n",
+       "8     0.25    0.000000                0.000000   0.093750   0.000000        7\n",
+       "9     0.25    0.166667                0.041667   0.093750   0.444444        7\n",
+       "10    0.25    0.125000                0.031250   0.093750   0.333333        7\n",
+       "11    0.25    0.083333                0.020833   0.093750   0.222222        7\n",
+       "12    0.25    0.250000                0.062500   0.156250   0.400000        5\n",
+       "13    0.25    0.166667                0.041667   0.156250   0.266667        5\n",
+       "14    0.25    0.125000                0.031250   0.156250   0.200000        5\n",
+       "15    0.25    0.083333                0.020833   0.156250   0.133333        5"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "[pd.concat(value) for key, value in result_dict.items() ]"
+    "pd.concat(result_dict.values(), ignore_index=True)"
    ]
   },
   {
