started oop for bowls problem

--- a/bayesian_made_simple/cookie_01.ipynb
+++ b/bayesian_made_simple/cookie_01.ipynb
@@ -5,21 +5,11 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-23T12:14:51.163163Z",
-     "start_time": "2021-05-23T12:14:48.700263Z"
+     "end_time": "2021-05-28T05:20:53.105903Z",
+     "start_time": "2021-05-28T05:20:48.124918Z"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\numpy\\core\\__init__.py:29: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\numpy\\.libs\\libopenblas.PYQHXLVVQ7VESDPUVUADXEVJOBGHJPAY.gfortran-win_amd64.dll\n",
-      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\numpy\\.libs\\libopenblas.TXA6YQSD3GCQQC22GEQ54J2UDCXDXHWN.gfortran-win_amd64.dll\n",
-      "  stacklevel=1)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -76,21 +66,108 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-23T12:14:51.208179Z",
-     "start_time": "2021-05-23T12:14:51.180304Z"
+     "end_time": "2021-05-28T05:27:29.690376Z",
+     "start_time": "2021-05-28T05:27:29.671552Z"
     }
    },
    "outputs": [],
    "source": [
-    "def get_posterior(priors, priors_index, likelihood):\n",
-    "    new_df = pd.DataFrame()\n",
-    "    new_df['priors'] = priors\n",
-    "    new_df['likelihood'] = likelihood\n",
-    "    new_df.index = priors_index\n",
-    "    new_df['unnormalized_posterior'] = new_df['priors'] * new_df['likelihood']\n",
-    "    new_df['prob_data'] = [sum(new_df['unnormalized_posterior']) for num in range(len(new_df))]\n",
-    "    new_df['posterior'] = (new_df['priors'] * new_df['likelihood']) / new_df['prob_data']\n",
-    "    return new_df"
+    "class get_results:\n",
+    "    def __init__(self, priors, priors_index, likelihood):\n",
+    "        self.priors = priors\n",
+    "        self.priors_index = priors_index\n",
+    "        self.likelihood = likelihood\n",
+    "        \n",
+    "    def GetPosterior(self):\n",
+    "        new_df = pd.DataFrame()\n",
+    "        new_df['priors'] = priors\n",
+    "        new_df['likelihood'] = likelihood\n",
+    "        new_df.index = priors_index\n",
+    "        new_df['unnormalized_posterior'] = new_df['priors'] * new_df['likelihood']\n",
+    "        new_df['prob_data'] = [sum(new_df['unnormalized_posterior']) for num in range(len(new_df))]\n",
+    "        new_df['posterior'] = (new_df['priors'] * new_df['likelihood']) / new_df['prob_data']\n",
+    "        return new_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-28T05:28:38.487172Z",
+     "start_time": "2021-05-28T05:28:38.428595Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>priors</th>\n",
+       "      <th>likelihood</th>\n",
+       "      <th>unnormalized_posterior</th>\n",
+       "      <th>prob_data</th>\n",
+       "      <th>posterior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bowl_1</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bowl_2</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        priors  likelihood  unnormalized_posterior  prob_data  posterior\n",
+       "Bowl_1     0.5        0.75                   0.375      0.625        0.6\n",
+       "Bowl_2     0.5        0.50                   0.250      0.625        0.4"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priors = [1/2, 1/2]\n",
+    "priors_index = ['Bowl_1', 'Bowl_2']\n",
+    "likelihood = [30/40, 10/20]\n",
+    "# call the instance\n",
+    "result = get_results(priors, priors_index, likelihood)\n",
+    "# get the df from method\n",
+    "result_df = result.GetPosterior()\n",
+    "result_df"
    ]
   },
   {
@@ -681,7 +758,7 @@
     }
    ],
    "source": [
-    "# in a single update for three times vanilla\n",
+    "# in a single update for three times chocolate\n",
     "priors = [1/2, 1/2]\n",
     "priors_index = ['Bowl_1', 'Bowl_2']\n",
     "likelihood = [10/40 * 10/40 * 10/40, 10/20 * 10/20 * 10/20]\n",
