--- a/bayesian_made_simple/cookie_01.ipynb
+++ b/bayesian_made_simple/cookie_01.ipynb
@@ -47,22 +47,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-05-23T12:14:51.177790Z",
-     "start_time": "2021-05-23T12:14:51.167770Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "priors = [1/2, 1/2]\n",
-    "priors_index = ['Bowl_1', 'Bowl_2']\n",
-    "likelihood = [30/40, 10/20]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
@@ -91,11 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-28T05:28:38.487172Z",
-     "start_time": "2021-05-28T05:28:38.428595Z"
+     "end_time": "2021-05-28T05:33:06.370450Z",
+     "start_time": "2021-05-28T05:33:06.336727Z"
     }
    },
    "outputs": [
@@ -154,95 +138,23 @@
        "Bowl_2     0.5        0.50                   0.250      0.625        0.4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# here we have 50% probability that either it will be bowl_01 or bowl_02\n",
     "priors = [1/2, 1/2]\n",
+    "# index name for each of the bowls\n",
     "priors_index = ['Bowl_1', 'Bowl_2']\n",
-    "likelihood = [30/40, 10/20]\n",
+    "# since we have got vanilla, then there is chance of 30/40 in bowl_01 and 20/40 in bowl_02\n",
+    "likelihood = [30/40, 20/40]\n",
     "# call the instance\n",
     "result = get_results(priors, priors_index, likelihood)\n",
     "# get the df from method\n",
     "result_df = result.GetPosterior()\n",
     "result_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-05-23T12:14:51.269604Z",
-     "start_time": "2021-05-23T12:14:51.211431Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>priors</th>\n",
-       "      <th>likelihood</th>\n",
-       "      <th>unnormalized_posterior</th>\n",
-       "      <th>prob_data</th>\n",
-       "      <th>posterior</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Bowl_1</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.375</td>\n",
-       "      <td>0.625</td>\n",
-       "      <td>0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Bowl_2</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>0.250</td>\n",
-       "      <td>0.625</td>\n",
-       "      <td>0.4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        priors  likelihood  unnormalized_posterior  prob_data  posterior\n",
-       "Bowl_1     0.5        0.75                   0.375      0.625        0.6\n",
-       "Bowl_2     0.5        0.50                   0.250      0.625        0.4"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_df = get_posterior(priors, priors_index, likelihood)\n",
-    "new_df"
    ]
   },
   {
@@ -331,8 +243,11 @@
     "priors = [1/2, 1/2]\n",
     "priors_index = ['Bowl_1', 'Bowl_2']\n",
     "likelihood = [30/40, 10/20]\n",
-    "new_df = get_posterior(priors, priors_index, likelihood)\n",
-    "new_df"
+    "# call the instance\n",
+    "result = get_results(priors, priors_index, likelihood)\n",
+    "# get the df from method\n",
+    "result_df = result.GetPosterior()\n",
+    "result_df"
    ]
   },
   {
